--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "chai": "^4.1.1",
+        "cross-env": "^5.1.1",
         "database-cleaner": "^1.2.0",
         "istanbul": "^0.4.5",
         "mocha": "^3.5.0",
@@ -30,7 +31,10 @@
         "supertest": "^3.0.0",
         "testdouble": "^3.2.4"
     },
-    "keywords": ["mysql", "nodejs"],
+    "keywords": [
+        "mysql",
+        "nodejs"
+    ],
     "author": "marcospss",
     "license": "ISC",
     "bugs": {
