--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "API NodeJS com base de dados MySQL",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha ./tests/**/*.test.js",
+        "start": "index.js",
+        "dev": "cross-env ENV=dev nodemon index.js"
     },
     "repository": {
         "type": "git",
