--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "API NodeJS com base de dados MySQL",
     "main": "index.js",
     "scripts": {
-        "test": "mocha ./tests/**/*.test.js",
+        "test": "cross-env ENV=dev mocha ./tests/**/*.test.js",
         "start": "index.js",
         "dev": "cross-env ENV=dev nodemon index.js"
     },
