--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
-  "name": "nodejs-mysql",
-  "version": "1.0.0",
-  "description": "API NodeJS com base de dados MySQL",
-  "main": "index.js",
-  "scripts": {
-    "test": "cross-env ENV=dev mocha ./tests/**/*.test.js",
-    "start": "index.js",
-    "dev": "cross-env ENV=dev nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/marcospss/nodejs-mysql.git"
-  },
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "consign": "^0.1.2",
-    "cors": "^2.8.1",
-    "del": "^2.2.2",
-    "express": "^4.16.2",
-    "express-validator": "^2.20.8",
-    "gm": "^1.23.1",
-    "jsonwebtoken": "^5.4.1",
-    "mkdirp": "^0.5.1",
-    "morgan": "^1.7.0",
-    "multer": "^1.3.0",
-    "mysql": "^2.15.0",
-    "path": "^0.12.7",
-    "winston": "^2.4.0"
-  },
-  "devDependencies": {
-    "chai": "^4.1.1",
-    "cross-env": "^5.1.1",
-    "database-cleaner": "^1.2.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.5.0",
-    "nyc": "^11.3.0",
-    "supertest": "^3.0.0",
-    "testdouble": "^3.2.4"
-  },
-  "keywords": [
-    "mysql",
-    "nodejs"
-  ],
-  "author": "marcospss",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/marcospss/nodejs-mysql/issues"
-  },
-  "homepage": "https://github.com/marcospss/nodejs-mysql#readme"
+    "name": "nodejs-mysql",
+    "version": "1.0.0",
+    "description": "API NodeJS com base de dados MySQL",
+    "main": "index.js",
+    "engines": {
+        "node": "9.4.4",
+        "npm": "5.6.0"
+    },
+    "scripts": {
+        "test": "cross-env ENV=dev mocha ./tests/**/*.test.js",
+        "start": "index.js",
+        "dev": "cross-env ENV=dev nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/marcospss/nodejs-mysql.git"
+    },
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "consign": "^0.1.2",
+        "cors": "^2.8.1",
+        "del": "^2.2.2",
+        "express": "^4.16.2",
+        "express-validator": "^2.20.8",
+        "gm": "^1.23.1",
+        "jsonwebtoken": "^5.4.1",
+        "mkdirp": "^0.5.1",
+        "morgan": "^1.7.0",
+        "multer": "^1.3.0",
+        "mysql": "^2.15.0",
+        "path": "^0.12.7",
+        "winston": "^2.4.0"
+    },
+    "devDependencies": {
+        "chai": "^4.1.1",
+        "cross-env": "^5.1.1",
+        "database-cleaner": "^1.2.0",
+        "istanbul": "^0.4.5",
+        "mocha": "^3.5.0",
+        "nyc": "^11.3.0",
+        "supertest": "^3.0.0",
+        "testdouble": "^3.2.4"
+    },
+    "keywords": [
+        "mysql",
+        "nodejs"
+    ],
+    "author": "marcospss",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/marcospss/nodejs-mysql/issues"
+    },
+    "homepage": "https://github.com/marcospss/nodejs-mysql#readme"
 }
