--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "test": "cross-env ENV=dev mocha ./tests/**/*.test.js",
-        "start": "index.js",
+        "start": "node index.js",
         "dev": "cross-env ENV=dev nodemon index.js"
     },
     "repository": {
