--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "chai": "^4.1.1",
         "cross-env": "^5.1.1",
         "database-cleaner": "^1.2.0",
+        "dotenv": "^5.0.1",
         "istanbul": "^0.4.5",
         "mocha": "^3.5.0",
         "nyc": "^11.3.0",
